apps/dozzle/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dozzle
  labels:
    app.kubernetes.io/name: dozzle
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dozzle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dozzle
    spec:
      serviceAccountName: dozzle
      containers:
        - name: dozzle
          image: amir20/dozzle:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
