apps/dozzle/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dozzle
  labels:
    app.kubernetes.io/name: dozzle
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: dozzle
