apps/dozzle/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dozzle
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Dozzle
    gethomepage.dev/description: Real-time Log Viewer
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: dozzle
    gethomepage.dev/href: https://dozzle.cyphers.app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dozzle.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: dozzle
          namespace: dozzle
          port: 8080
  tls:
    secretName: production-cyphers-app-tls
